--- a/www/speakers.html
+++ b/www/speakers.html
@@ -73,41 +73,67 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <div class="fill" style="background-image:url(img/speakers/dino.png);"></div>
+                    <div class="fill" style="background-image:url(img/speakers/gerd-leonhard.jpg);"></div>
                     <a href="#fullintro" data-transition="slideup">
                         <div data-role="main" id="shortintro">
                             <div class="carousel-header">
-                                <h2>TOM JONES</h2>
-                                <h3>SINGER</h3>
+                                <h2>GERD LEONHARD</h2>
+                                <h3>/FUTURIST /HUMANIST /AUTHOR /CEO THE FUTURES AGENCY</h3>
                             </div>
                             <div class="carousel-caption">
                                 <h4><i id="arrowUp" class="fa fa-chevron-up" aria-hidden="true"></i>
-                                    <span style = "color: #e64696;">#</span>learning
-                                    <span style = "color: #ffb41e;">#</span>mobile
+                                    <span style = "color: #e64696;">#</span>future
+                                    <span style = "color: #ffb41e;">#</span>business
+									<span style = "color: #e64696;">#</span>humanity
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+								<div class="intro">
+									<p>Gerd Leonhard is a widely-known and top-rated futurist, with over 1500 engagements in 50+ countries since 2004 and a combined audience of over 1 million people. Gerd focusses on near-future, ‘nowist’ observations and actionable foresights in the sectors of humanity, society, business and commerce, media, technology and communications. Gerd is also an influential author, a sought-after executive ‘future trainer’ and a trusted strategic advisor. He is the co-author of the best-selling book The Future of Music and the author of 5 other books including ‘The Humanity Challenge’ (June 2016). Gerd is also the host of the web-TV series TheFutureShow and the CEO of TheFuturesAgency, a global network of over 30 leading futurists.</p>
+									<p>Gerd is considered a leading voice on a wide range of topics including digital transformation and the opportunity-challenges of the coming exponential society, a sustainable business and cultural ecology, social media and communications, TV / film, radio and broadcasting futures, mobile content and commerce, innovation, leadership and entrepreneurship, ‘hard-future’ consumer trends, human-machine futures and AI, cognitive computing, the IoT, big data and automation, next-generation advertising, marketing and branding, as well as sustainability and related ‘green future’ topics.</p>
+									<p>In 2006, The Wall Street Journal called Gerd ‘one of the leading Media Futurists in the World’. In 2015, Wired Magazine listed Gerd as #88 of the top 100 influencers in Europe. He’s #21 on the global list of futurists. Gerd's keynotes, speeches and presentations are renowned for their hard-hitting and provocative yet inspiring, often humorous and always personal motivational style. Gerd is highly regarded as a global influencer and has advised many business leaders and government officials around the globe. His diverse client list of over 300 companies.</p>
+								</div>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="item">
-                  <div class="fill" style="background-image:url('img/speakers/dino.png');"></div>
+                  <div class="fill" style="background-image:url('img/speakers/auer-welsbach.jpg');"></div>
                     <div class="carousel-header">
-                        <h2>ETUNIMI SUKUNIMI</h2>
-                        <h3>ALAOTSIKKO</h3>
+                        <h2>CHRISTOPH AUER-WELSBACH</h2>
+                        <h3>/IBM Watson</h3>
                     </div>
                     <div class="carousel-caption">
                         <h4><i id="arrowUp" class="fa fa-chevron-up" aria-hidden="true"></i>
-                            <span style = "color: #e64696;">#</span>pöhinä
-                            <span style = "color: #ffb41e;">#</span>kupla
+                            <span style = "color: #e64696;">#</span>artificialintelligence
+                            <span style = "color: #ffb41e;">#</span>future
                         </h4>
-                        <p>lorem ipsum</p>
+						<div class="intro">
+							<p>Experienced founder, product manager, venture community builder, and speaker on Artificial Intelligence, Blockchain and Internet of Things. Focusing on Cognitive Computing as the leader of IBM Watson Partner Innovation in Europe, and applied Artificial Intelligence as the initiator of City.AI. Christoph is from Austria and lives in Netherlands now.</p>
+
+						</div>
+					</div>
+                </div>
+			  	<div class="item">
+                  <div class="fill" style="background-image:url('img/speakers/alan-laubsch.jpg');"></div>
+                    <div class="carousel-header">
+                        <h2>ALAN LAUBSCH</h2>
+                        <h3>/Natural Capital Market</h3>
                     </div>
+                    <div class="carousel-caption">
+                        <h4><i id="arrowUp" class="fa fa-chevron-up" aria-hidden="true"></i>
+                            <span style = "color: #e64696;">#</span>blockchain
+                            <span style = "color: #ffb41e;">#</span>ecosystem
+							<span style = "color: #e64696;">#</span>network
+                        </h4>
+						<div class="intro">
+							<p>Alan is a passionate risk and ecosystems researcher, and a founder of the Natural Capital Alliance (NCA). Alan currently runs the Natural Capital Markets group at Lykke, which provides instant liquidity for Natural Capital Coins without transaction fees. Alan started his career as a researcher in JPMorgan’s corporate risk management group in New York, after receiving a degree in Industrial Engineering at Stanford University in 1993. He is one of 25 founding members of the RiskMetrics Group (now part of MSCI), where he authored Risk Management: A Practical Guide (1999). Alan became fascinated by systemic risk early warning signals with the onset of the US Subprime crisis in 2007, eventually developing a next generation framework for Integrated Risk Management. Alan is inspired by evolutionary ecosystems, and his most recent publication is Adaptive Risk Management: Powered by Network Science. Alan’s mission is to catalyze a global risk culture to protect the systems that sustain us.</p>
+
+						</div>
+					</div>
                 </div>
 
                 <div class="item">
-                  <div class="fill" style="background-image:url('img/speakers/NeilHarbisson.png');"></div>
+                  <div class="fill" style="background-image:url('img/speakers/NeilHarbisson.jpg');"></div>
                     <div class="carousel-header">
                         <h2>NEIL HARBISSON</h2>
                         <h3>/Cyborg /Artist</h3>
@@ -117,15 +143,14 @@
                             <span style = "color: #e64696;">#</span>cybernetics
                             <span style = "color: #ffb41e;">#</span>humanandmachine</h4>
                         <div class="intro">
-                            <p>
-                                <strong>NEIL HARBISSON</strong> is a Catalan-raised, British-born contemporary artist and cyborg activist best known for having an antenna implanted in his skull and for being officially recognized as a cyborg by a government. The antenna allows him to perceive visible and invisible colours such as infrareds and ultraviolets via sound waves. The antenna’s Internet connection allows him to receive colors from space as well as images, videos, music or phone calls directly into his head via external devices such as mobile phones or satellites. Harbisson identifies himself as a cyborg, he feels both his mind and body are united to cybernetics. He doesn’t feel he is using or wearing technology, instead he feels he is technology. His artworks investigate the relationship between colour and sound, experiment the boundaries of human perception and explore the use of artistic expression via sensory extensions. In 2010 he co­-founded the Cyborg Foundation with Moon Ribas, an international organization that aims to help humans become cyborgs, defend cyborg rights and promote cyborgism as a social and artistic movement.
+                            <p>Neil Harbisson is a Catalan-raised, British-born contemporary artist and cyborg activist best known for having an antenna implanted in his skull and for being officially recognized as a cyborg by a government. The antenna allows him to perceive visible and invisible colours such as infrareds and ultraviolets via sound waves. The antenna’s Internet connection allows him to receive colors from space as well as images, videos, music or phone calls directly into his head via external devices such as mobile phones or satellites. Harbisson identifies himself as a cyborg, he feels both his mind and body are united to cybernetics. He doesn’t feel he is using or wearing technology, instead he feels he is technology. His artworks investigate the relationship between colour and sound, experiment the boundaries of human perception and explore the use of artistic expression via sensory extensions. In 2010 he co­-founded the Cyborg Foundation with Moon Ribas, an international organization that aims to help humans become cyborgs, defend cyborg rights and promote cyborgism as a social and artistic movement.
                             </p>
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                  <div class="fill" style="background-image:url('img/speakers/cecilia-tham.png');"></div>
+                  <div class="fill" style="background-image:url('img/speakers/cecilia-tham.jpg');"></div>
                     <div class="carousel-header">
                         <h2>CECILIA THAM</h2>
                         <h3>/Mob /FabCafe</h3>
@@ -133,15 +158,13 @@
                     <div class="carousel-caption">
                         <h4><i id="arrowUp" class="fa fa-chevron-up" aria-hidden="true"></i>
                             <span style = "color: #e64696;">#</span>innovation
-                            <span style = "color: #ffb41e;">#</span>community<br>
+                            <span style = "color: #ffb41e;">#</span>community
                             <span style = "color: #e64696;">#</span>co-creation
                         </h4>
                         <div class="intro">
-                            <p>
-                                <strong>CECILIA THAM</strong> has centered her focus on building communities for innovation with a focus in design and technology. She is a serial entrepreneur, launched various business and start-ups, beginning with Makers of Barcelona (MOB) and FabCafe Barcelona. MOB is a collaborative community co-working facility. FabCafe is a new concept that brings digital fabrication tools to the everyday environment of a coffee shop. She is also the founder of Assemble.rs, an online open innovation management platform that enables all to assemble, accelerate and analyze innovation individually and collectively. Her latest venture is FutureFunded.co, a community funding platform focus on learning.
+                            <p>Cecilia Tham has centered her focus on building communities for innovation with a focus in design and technology. She is a serial entrepreneur, launched various business and start-ups, beginning with Makers of Barcelona (MOB) and FabCafe Barcelona. MOB is a collaborative community co-working facility. FabCafe is a new concept that brings digital fabrication tools to the everyday environment of a coffee shop. She is also the founder of Assemble.rs, an online open innovation management platform that enables all to assemble, accelerate and analyze innovation individually and collectively. Her latest venture is FutureFunded.co, a community funding platform focus on learning.
                             </p>
-                            <p>
-                                She is also the founder of MEAT a co-creative agency that enables companies to transform with design and technology. Cecilia is a designer and biologist by training, a serial entrepreneur by choice, and a maker for life. She is a 4-times TEDx Barcelona speaker, as well as in Open FAD and 4YFN. She is currently the adjunct professor at Parsons New School Strategic Design and Management and professor of Social Innovation Change at Toulouse Business School. She is a mentor at Google Launchpad Barcelona, Startupbootcamp IoT & Data, and Harvard Innovation Lab.
+                            <p>She is also the founder of MEAT a co-creative agency that enables companies to transform with design and technology. Cecilia is a designer and biologist by training, a serial entrepreneur by choice, and a maker for life. She is a 4-times TEDx Barcelona speaker, as well as in Open FAD and 4YFN. She is currently the adjunct professor at Parsons New School Strategic Design and Management and professor of Social Innovation Change at Toulouse Business School. She is a mentor at Google Launchpad Barcelona, Startupbootcamp IoT & Data, and Harvard Innovation Lab.
                             </p>
                         </div>
                     </div>
@@ -163,12 +186,8 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
-        <script type='application/javascript' src='js/jquery.nicescroll.js'></script>
 <script>
     // SIDE MENU
-	$(document).ready(function() {
-        $(".intro").niceScroll();
-    });
 
     $('#openMenu').tapend(function(){
         $('.wrapper').animate(
@@ -218,16 +237,16 @@
         $(this).find('#arrowUp').removeClass('fa-chevron-up').addClass('fa-chevron-down');
         $('.closeMenu').css({
             'display': 'block',
-            'height': '44vh'
+            'height': '54vh'
             });
     });
 
     $('.closeMenu').on('tapend tapmove', function(){
-        $(".carousel-caption").animate({bottom:'-44vh'},200);
+        $(".carousel-caption").animate({bottom:'-50vh'},200);
         $(".carousel-caption").find('#arrowUp').removeClass('fa-chevron-down').addClass('fa-chevron-up');
         $(this).css({
             'display': 'none',
-            'height': 'initial'
+            'height': '100vh'
         });
     });
 
