--- a/www/blank.html
+++ b/www/blank.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/carousel.css" rel="stylesheet">
 </head>
-
 <body>
 <div class="wrapper">
     <div id="menu">
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a href="speakersgrid.html">
+                <a href="speakers.html">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
@@ -57,7 +57,7 @@
         </ul>
     </div>
     <div id="content">
-	    <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
+        <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
         <div class="closeMenu" id="closeMenu"></div>
         <nav class="navbar navbar-default">
             <a id="openMenu" class="navbar-brand" href="#">
@@ -66,42 +66,28 @@
         </nav>
 
         <div class="container">
-            <br><br><br><br><br>
-            <h1 style="color:#000">THE SHIFT 2017</h1>
-            <!--<p><input type="button" onclick="oauth2_login()" value="Oauth2 Login"></p>
-            <div id="logs"></div>
-            <div id="logs2"></div>-->
-            <hr>
 
-            <h3 style="text-align: left; padding-left: 30vw">BUSINESS<br><br>
-            INSPIRATION<br><br>
-            LEARNING</h3>
-			<!---<input type="text" name="input" id="input" placeholder="Hello, my name is..."></input>
-
-			<input type="button" name="send" id="send" value=">>>"></input>
-			<br><hr><br>
-			<p id="greetings"></p>
-			<br><hr>
-			<input type="button" name="erase" id="erase" value="Poista nimitiedot"></input>
-			<br><br>
-
-			<img src="img/kartta.svg">
-			<img src="img/kartta.svg">--->
         </div>
     </div>
-</div>
-
-
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
-<script type='application/javascript' src='js/fastclick.js'></script>
 <script>
-
-	$(function() {
-        FastClick.attach(document.body);
+    $(document).ready(function(){
+        function qs(key) {
+            key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
+            var match = location.search.match(new RegExp("[?&]" + key + "=([^&]+)(&|$)"));
+            var slide = match && decodeURIComponent(match[1].replace(/\+/g, " "));
+            if (Math.floor(slide) == slide && $.isNumeric(slide))
+                return parseInt(slide);
+            else
+                return 0;
+        }
+        $('#myCarousel').carousel(qs('slide'));
     });
+    // SIDE MENU
+
     $('#openMenu').tapend(function(){
         $('.wrapper').animate(
 			{left: '0'},
@@ -129,13 +115,41 @@
 		);
         $(this).css('display', 'none');
     }).stop(true);
-/*
+
+/*  // MENU SWIPE FROM LEFT
     $('#content').swiperight(function(){
         $('.wrapper').animate({left:'0px'});
         $('#closeMenu').css('display','block');
     });
 */
+    // SPEAKER INTRO CAROUSEL
+    $("#myCarousel").swiperight(function() {
+        $("#myCarousel").carousel('prev');
+    });
 
+    $("#myCarousel").swipeleft(function() {
+        $("#myCarousel").carousel('next');
+    });
+
+    $(".carousel-caption").tapend(function(){
+        $(this).animate({bottom:'0vh'},200);
+        $(this).find('#arrowUp').removeClass('fa-chevron-up').addClass('fa-chevron-down');
+        $('.closeMenu').css({
+            'display': 'block',
+            'height': '54vh'
+            });
+    });
+
+    $('.closeMenu').on('tapend tapmove', function(){
+        $(".carousel-caption").animate({bottom:'-50vh'},200);
+        $(".carousel-caption").find('#arrowUp').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+        $(this).css({
+            'display': 'none',
+            'height': '100vh'
+        });
+    });
+
+    // USER INFO
 	$('#send').on('tap', function(){
 		localStorage.userName = $('#input').val();
 		introductions();
@@ -152,10 +166,10 @@
 
 		}else{
 			$('#greetings').html('You\'re new! Introduce yourself <strong><a href="">here</a></strong>');
-		}
-	}
+		};
+	};
 
-    // template for new oauth2 service
+    // LINKEDIN OAUTH2
     function oauth2_login() {
         $.oauth2({
             auth_url: 'https://www.linkedin.com/oauth/v2/authorization',           // required
@@ -184,7 +198,7 @@
             $("#logs").append("<p class='error'><b>error: </b>"+JSON.stringify(error)+"</p>");
             $("#logs").append("<p class='error'><b>response: </b>"+JSON.stringify(response)+"</p>");
         });
-    }
+    };
 </script>
 </body>
 </html>
