--- a/www/speakers.html
+++ b/www/speakers.html
@@ -39,12 +39,17 @@
                 </a>
             </li>
             <li>
-                <a href="speakers.html">
+                <a href="speakersgrid.html">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
                 <i class="fa fa-map-o" aria-hidden="true"></i>
+            </li>
+            <li>
+                <a href="partners.html">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </a>
             </li>
             <li>
                 <i class="fa fa-info" aria-hidden="true"></i>
@@ -197,11 +202,11 @@
             else
                 return 0;
         }
-                $('#myCarousel').carousel(qs('slide'));
+        $('#myCarousel').carousel(qs('slide'));
     });
     // SIDE MENU
 
-    $('#openMenu').tapend(function(){
+    $('#openMenu').on('tapstart', function(){
         $('.wrapper').animate(
 			{left: '0'},
 			200,
