--- a/www/speakersgrid.html
+++ b/www/speakersgrid.html
@@ -40,7 +40,7 @@
                 </a>
             </li>
             <li>
-                <a href="speakersgrid.html">
+                <a href="speakers.html">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
