--- a/www/speakersgrid2.html
+++ b/www/speakersgrid2.html
@@ -22,8 +22,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/speakergrid.css" rel="stylesheet">
 </head>
-
 <body>
 <div class="wrapper">
     <div id="menu">
@@ -39,7 +40,7 @@
                 </a>
             </li>
             <li>
-                <a href="speakers.html">
+                <a href="speakersgrid.html">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
@@ -64,13 +65,122 @@
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </a>
         </nav>
-
         <div class="container">
+
+            <div class="row col-xs-12">
+
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/gerd-leonhard.jpg');">
+                    <a href="speakers.html?slide=0">
+                       <span>Gerd<br> Leonhard</span>
+                    </a>
+
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/auer-welsbach.jpg');">
+                    <a href="speakers.html?slide=1">
+                      <span>Christop <br>Auer-Welsbach</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/alan-laubsch.jpg');">
+                    <a href="speakers.html?slide=2">
+                      <span>Alan <br>Laubsch</span>
+                    </a>
+                </div>
+            </div>
+            <div class="row col-xs-12">
+
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/NeilHarbisson.jpg');">
+                    <a href="speakers.html?slide=3">
+                        <span>Neil <br>Harbisson</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/cecilia-tham.jpg');">
+                    <a href="speakers.html?slide=4">
+                        <span>Cecilia <br>Tham</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=1">
+                        <span>Etunimi <br>Sukunimi</span>
+
+                    </a>
+                </div>
+
+            </div>
+            <div class="row col-xs-12">
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=4">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=1">
+                      <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+            </div>
+            <div class="row col-xs-12">
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=1">
+                        <span>Etunimi <br>Sukunimi</span>
+
+                    </a>
+                </div>
+             </div>
+
+            <div class="row col-xs-12">
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=1">
+                      <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+             </div>
+
+            <div class="row col-xs-12">
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=0">
+                        <span>Etunimi <br>Sukunimi</span>
+                    </a>
+                </div>
+                <div class="col-xs-4" id="speaker" style="background-image:url('img/speakers/dino.png');">
+                    <a href="speakers.html?slide=1">
+                        <span>Etunimi <br>Sukunimi</span>
+                                      </a>
+                </div>
+             </div>
         </div>
     </div>
 </div>
-
-
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
@@ -81,31 +191,6 @@
 	$(function() {
         FastClick.attach(document.body);
     });
-
-    $(function(){
-        $.getJSON('schedule.json',function(data){
-            //console.log(data.wednesday[0].schedule.length)
-            for(i = 0; i<data.wednesday.length; i++){
-                $('.container').append('<div><strong>' + data.wednesday[i].venue + '</strong></div>');
-                for(j = 0; j<data.wednesday[i].schedule.length; j++){
-                    $('.container').append(
-                        '<div>'+
-                        data.wednesday[i].schedule[j].name + ', ' +
-                        data.wednesday[i].schedule[j].company + '<br>' + data.wednesday[i].schedule[j].time
-                        + '</div>'
-                    );
-                };
-                $('.container').append('<hr>');
-            };
-
-            /*$.each(data.employees,function(i,emp){
-                $('ul').append('<li>'+emp.firstName+' '+emp.lastName+'</li>');
-            });*/
-        });
-    });
-
-
-
     $('#openMenu').tapend(function(){
         $('.wrapper').animate(
 			{left: '0'},
