--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a href="speakersgrid.html">
+                <a href="speakers.html">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
