--- a/www/partners.html
+++ b/www/partners.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a href="speakersgrid.html">
+                <a href="speakers.html">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
@@ -66,48 +66,65 @@
         </nav>
 
         <div class="container">
-            <div class="col-xs-12 partner partner01">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner01">
+                </div>
                 <div class="infotext">
                     <p>GE (NYSE: GE) is the world’s Digital Industrial Company, transforming industry with software-defined machines and solutions that are connected, responsive and predictive. GE is organized around a global exchange of knowledge, the "GE Store," through which each business shares and accesses the same technology, markets, structure and intellect. Each invention further fuels innovation and application across our industrial sectors. With people, services, technology and scale, GE delivers better outcomes for customers by speaking the language of industry.</p>
                 </div>
             </div>
-            <div class="col-xs-12 partner partner02">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner02">
+                </div>
                 <div class="infotext">
                     <p>Werstas is a workspace and community. In addition to great co-workers, potential business partners and the excellent coffee, Werstas has the best solutions for businesses of different sizes, freelancers and long distance workers.</p>
                 </div>
             </div>
-            <div class="col-xs-12 partner partner03">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner03">
+                </div>
                 <div class="infotext">
                     <p>Est sit enim est dolor. Et laboriosam quam autem explicabo sit quo dignissimos. Quos deserunt eum magni quas recusandae sit. Placeat quo autem tempora quis. Voluptas harum et aut. Quis nam ea dolorem placeat esse sunt quia.</p>
                 </div>
             </div>
-            <!---<div class="col-xs-12 partner partner04">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner04">
+                </div>
                 <div class="infotext">
                     <p>Omnis qui voluptates quos. Sed est repellat nihil repellendus. Eaque aut quis odit nobis corrupti deserunt ad. Vel sit laboriosam atque consectetur et. Nesciunt at alias tenetur. Id vero autem est corrupti odit non voluptate soluta.</p>
                 </div>
             </div>
-            <div class="col-xs-12 partner partner05">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner05">
+                </div>
                 <div class="infotext">
                     <p>Turun Sanomat is the leading local media and one of the biggest newspaper in Finland.</p>
                 </div>
             </div>
-            <div class="col-xs-12 partner partner06">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner06">
+                </div>
                 <div class="infotext">
                     <p>Rerum velit accusantium similique autem. Esse qui est consequuntur architecto quas quidem. Nostrum quod enim ad ullam culpa et mollitia. Repellat doloremque est aperiam eaque soluta placeat quae. Vitae placeat placeat adipisci dolorem consequatur.</p>
                 </div>
             </div>
-            <div class="col-xs-12 partner partner07">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner07">
+                </div>
                 <div class="infotext">
                     <p>Autem et quibusdam aut aut unde laboriosam. Qui possimus voluptas dolorem aut aliquam et voluptatem. Amet et vitae sit est facilis aspernatur illo.</p>
                 </div>
             </div>
-            <div class="col-xs-12 partner partner08">
+            <div class="col-xs-12 partnerWrap">
+                <div class="col-xs-12 partner partner08">
+                </div>
                 <div class="infotext">
                     <p>Consequatur officia natus tempora magnam. Consequuntur omnis ducimus alias ullam autem. Debitis sed facere omnis.</p>
                 </div>
-            </div>--->
+            </div>
         </div>
     </div>
+</div>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
@@ -156,15 +173,36 @@
     }).stop(true);
 
     //PARTNER INFO
-    $('.partner').tapend(function(){
-        var partner = $(this);
-        var top = partner.offset().top
-        partner.toggleClass('maxed');
+    $('.partnerWrap').on('tapstart', function(e,touch){
+        var tapStart = touch.position.y;
+        console.log(tapStart);
+        var partnerWrap = $(this);
+
+            $('.partnerWrap').on('tapend', function(e, touch){
+                var tapEnd = touch.position.y;
+                console.log(tapEnd);
+                if(tapStart === tapEnd){
+                    partnerWrap.children('.infotext').slideToggle();
+                    partnerWrap.children('.partner').toggleClass('bottom');
+                   }else{
+                       console.log('swipe');
+                   };
+            });
+
+        /*if(!partnerWrap.hasClass('maxed')){
+            top = partnerWrap.offset().top ;
+            console.log(partnerWrap.offset().top)
+        }else{
+            top = $('.container').scrollTop() - partnerWrap.offset().top;
+            console.log(partnerWrap.offset().top + ' - ' + $('.container').scrollTop())
+        }
+        partnerWrap.toggleClass('maxed');
         partner.children('.infotext').toggleClass('showText');
-        partner.siblings('.partner').toggleClass('hide');
-        /*partner.hasClass('maxed') ? top = 0: top = partner.offset().top - (window.innerHeight/100*15);
-        $('.container').animate({ scrollTop: top }, 1);*/
-        $('.container').toggleClass('noScroll')
+        partnerWrap.siblings('.partnerWrap').toggleClass('hide');
+        partner.hasClass('maxed') ? top = 0 : top = partner.offset().top - window.innerHeight/100*7;
+        $('.container').animate({ scrollTop: top }, 100)
+        console.log('= ' + top);
+        $('.container').toggleClass('noScroll');*/
     });
 
 /*  // MENU SWIPE FROM LEFT
