etusivu ja hampparin sijainti

--- a/www/index.html
+++ b/www/index.html
@@ -66,12 +66,12 @@
         </nav>
 
         <div class="container">
-            <br><br><br><br><br>
-            <h1 style="color:#000">THE SHIFT 2017</h1>
+            <div style="height: 40vh; display: -webkit-flex; display: flex; align-items: flex-end; justify-content: center">
+            	<h1 style="color:#000; padding-bottom: 4vh;">THE SHIFT 2017</h1>
+			</div>
             <!--<p><input type="button" onclick="oauth2_login()" value="Oauth2 Login"></p>
             <div id="logs"></div>
             <div id="logs2"></div>-->
-            <hr>
 
             <h3 style="text-align: left; padding-left: 30vw">BUSINESS<br><br>
             INSPIRATION<br><br>
